# SU2ReaderParaviewPlugin

./: CMakeLists.txt  README.md  SU2_mesh_io.cpp  SU2_mesh_io.h  makefile  test.cpp  vtkSU2Reader.cxx  vtkSU2Reader.h  vtkSU2Reader.xml
Plugin/: CMakeLists.txt
Plugin/Reader/: .CMakeLists.txt.swp  vtkSU2Reader.cxx  vtkSU2Reader.h  vtkSU2ReaderInternal.cxx
src/Plugin/: paraview.plugin
src/Plugin/Reader/: CMakeLists.txt  SU2_mesh_io.h  makefile  vtk.module  vtkSU2Reader.cxx
